--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,5 +28,5 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: 
-          - docker build -t my-apache2
-          - docker run -dit --name my-running-app -p 8080:80 my-apache2
+          docker build -t my-apache2
+          docker run -dit --name my-running-app -p 8080:80 my-apache2
