--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,7 +24,5 @@ jobs:
     container: alpine:3.15
     steps:
       - run: |
-          ls /
-          ls /opt/
-          ls /var/
+          ls /opt/*
         name: Run in container
