--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,5 +24,5 @@ jobs:
     container: alpine:3.15
     steps:
       - run: |
-          ls /var/*/*/
+          echo $env:GITHUB_PATH
         name: Run in container
