--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,5 +24,7 @@ jobs:
     container: alpine:3.15
     steps:
       - run: |
-          echo $env:GITHUB_PATH
+          echo ${{env:GITHUB_PATH}}
+          echo ${{env.GITHUB_PATH}}
+          echo ${{GITHUB_PATH}}
         name: Run in container
