--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -26,6 +26,6 @@ jobs:
     container: alpine:3.15
     steps:
       - run: |
-          echo ${{env.GITHUB_PATH}}
+          echo '${{env.GITHUB_PATH}}'
           ls /*/*/
         name: Run in container
