--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,5 +27,5 @@ jobs:
     steps:
       - run: |
           echo "path $GITHUB_PATH"
-          ls $GITHUB_PATH/*
+          ls $GITHUB_PATH
         name: Run in container
