--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,7 +22,7 @@ jobs:
           df -h
         name: Run on VM
   container:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     container: alpine:3.15
     steps:
       - run: |
