--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,5 +27,7 @@ jobs:
     steps:
       - run: |
           echo "path $GITHUB_PATH"
-          ls $GITHUB_PATH
+          ls $GITHUB_PATH/*
+          ls $RUNNER_TEMP/*
+          ls $GITHUB_WORKSPACE/*
         name: Run in container
