--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,6 +18,6 @@ jobs:
     
     steps:
       - name: Start test server
-        run: docker-compose up -d main-server
+        run: docker build . --file Dockerfile --tag main-server:$(date +%s)
 
 
