--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,6 +17,7 @@ jobs:
     runs-on: self-hosted
     
     steps:
+      - uses: actions/checkout@v2
       - name: Start test server
         run: docker build . --file Dockerfile --tag main-server:$(date +%s)
 
