--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: ls
-        run: ls ./*/*/
+        run: ls /
       - name: Start test server
         run: docker build . --file Dockerfile --tag main-server:$(date +%s)
 
