--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,5 +16,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-    - name: ls command
-      run: ls /
+    - name: ls command var
+      run: ls /var/*/*
+    - name: ls command home
+      run: ls /home/*/*
