--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,4 +17,4 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
     - name: Run docker
-      run: docker run --name main-server -v /:/usr/share/nginx/html:ro -d nginx -p 8080:80 nginx
+      run: docker run --name main-server -v /:/usr/share/nginx/html:ro -d nginx
