--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,4 +17,4 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
     - name: Run docker
-      run: docker run --name main-server -p 8088:80 -v ${RUNNER_TEMP}/:/usr/share/nginx/html:ro -d nginx
+      run: docker run --name main-server -p 8088:80 -v $RUNNER_TEMP/:/usr/share/nginx/html:ro -d nginx
